--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "edge",
             "request": "launch",
             "version": "beta",
-            "url": "http://localhost:5500/index.html",
+            "url": "http://localhost:5500/",
             "webRoot": "${workspaceFolder}/wwwroot"
         },
         {
